kubernetes/apps/obico/http-route.yml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: obico
spec:
  hostnames: ["obico.chkpwd.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: obico-server
          port: 3334
    - matches:
        - path:
            type: PathPrefix
            value: /admin
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 301
            path:
              type: ReplaceFullPath
              replaceFullPath: /
  parentRefs:
    - name: private
      namespace: kube-system
      sectionName: https
